--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+
+<!-- 
+ 
+git add .
+git commit -m "random msg"
+git push
+
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -99,7 +107,7 @@
         <!-- 1. Hero Section -->
         <section id="hero" class="py-24 md:py-32 flex flex-col items-center text-center">
             <!-- Placeholder Image/Avatar - Replace with your own link -->
-            <img src="D:\RITESH MANNA\Pictures\_F2A3804 (1).jpg" alt="RITESH MANNA's Photo" 
+            <img src="./images/mypic/_F2A3804 (1).jpg" alt="RITESH MANNA's Photo" 
                  class="w-36 h-36 rounded-full object-cover mb-6 border-4 border-accent-teal shadow-2xl">
             
             <h2 class="text-4xl sm:text-6xl font-extrabold mb-4 text-white">Hello, I'm <span class="text-accent-teal">RITESH MANNA</span></h2>
