--- a/index.html
+++ b/index.html
@@ -161,36 +161,36 @@
     <div id="sports-modal" class="gallery-modal">
         <span class="close-modal" onclick="closeGallery('sports-modal')">&times;</span>
         <div class="modal-content-wrapper">
-            <img src="./images/sports/football2.jpg" class="modal-img">
-            <img src="./images/sports/football9.jpg" class="modal-img">
-            <img src="./images/sports/football5.jpg" class="modal-img">
-            <img src="./images/sports/football12.jpg" class="modal-img">
-            <img src="./images/sports/football14.jpg" class="modal-img">
-            <img src="./images/sports/football6.jpg" class="modal-img">
-            <img src="./images/sports/football15.jpg" class="modal-img">
-            <img src="./images/sports/football13.jpg" class="modal-img">
-            <img src="./images/sports/football18.jpg" class="modal-img">
-            <img src="./images/sports/foo" class="modal-img">
+            <img src="./images/sports/football2.jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football9.jpg" loading="lazy"class="modal-img">
+            <img src="./images/sports/football5.jpg" loading="lazy"class="modal-img">
+            <img src="./images/sports/football12.jpg" loading="lazy"class="modal-img">
+            <img src="./images/sports/football14.jpg" loading="lazy"class="modal-img">
+            <img src="./images/sports/football6.jpg" loading="lazy"class="modal-img">
+            <img src="./images/sports/football15.jpg" loading="lazy"class="modal-img">
+            <img src="./images/sports/football13.jpg" loading="lazy"class="modal-img">
+            <img src="./images/sports/football18.jpg" loading="lazy"class="modal-img">
+            <img src="./images/sports/football20.jpg" loading="lazy"class="modal-img">
         </div>
     </div>
 
     <div id="concert-modal" class="gallery-modal">
         <span class="close-modal" onclick="closeGallery('concert-modal')">&times;</span>
         <div class="modal-content-wrapper">
-            <img src="./images/contest/_DSC0138.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0135.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0138.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0197.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0144.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0208.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0404 (1).jpg" class="modal-img">
-            <img src="./images/contest/_DSC0383.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0478.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0386.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0768.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0481.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0428.jpg" class="modal-img">
-            <img src="./images/contest/_DSC0460.jpg" class="modal-img">
+            <img src="./images/contest/_DSC0138.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0135.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0138.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0197.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0144.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0208.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0404 (1).jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0383.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0478.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0386.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0768.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0481.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0428.jpg" loading="lazy"class="modal-img">
+            <img src="./images/contest/_DSC0460.jpg" loading="lazy" class="modal-img">
         </div>
     </div>
 
@@ -198,15 +198,15 @@
         <span class="close-modal" onclick="closeGallery('wildlife-modal')">&times;</span>
         <div class="modal-content-wrapper">
             <img src="./images/wildlife/Ritesh wildlife.jpg" class="modal-img">
-            <img src="./images/wildlife/_DSC0159.jpg" class="modal-img">
-            <img src="./images/wildlife/_DSC0182.jpg" class="modal-img">
-            <img src="./images/wildlife/Picsart_23-02-13_21-33-31-415.jpg" class="modal-img">
-            <img src="./images/wildlife/Picsart_23-02-13_21-39-56-495.jpg" class="modal-img">
-            <img src="./images/wildlife/Picsart_23-02-13_21-41-58-472.jpg" class="modal-img">
-            <img src="./images/wildlife/Picsart_23-02-13_21-54-43-929.jpg" class="modal-img">
-            <img src="./images/wildlife/Picsart_23-02-13_22-03-22-885.jpg" class="modal-img">
-            <img src="./images/wildlife/Picsart_25-02-05_12-21-58-182.jpg" class="modal-img">
-            <img src="./images/wildlife/Picsart_25-02-05_12-25-18-153.jpg" class="modal-img">
+            <img src="./images/wildlife/_DSC0159.jpg" loading="lazy"class="modal-img">
+            <img src="./images/wildlife/_DSC0182.jpg" loading="lazy"class="modal-img">
+            <img src="./images/wildlife/Picsart_23-02-13_21-33-31-415.jpg"loading="lazy" class="modal-img">
+            <img src="./images/wildlife/Picsart_23-02-13_21-39-56-495.jpg" loading="lazy" class="modal-img">
+            <img src="./images/wildlife/Picsart_23-02-13_21-41-58-472.jpg" loading="lazy" class="modal-img">
+            <img src="./images/wildlife/Picsart_23-02-13_21-54-43-929.jpg" loading="lazy" class="modal-img">
+            <img src="./images/wildlife/Picsart_23-02-13_22-03-22-885.jpg" loading="lazy" loading="lazy" class="modal-img">
+            <img src="./images/wildlife/Picsart_25-02-05_12-21-58-182.jpg" loading="lazy"class="modal-img">
+            <img src="./images/wildlife/Picsart_25-02-05_12-25-18-153.jpg" loading="lazy"class="modal-img">
         </div>
     </div>
 
