--- a/index.html
+++ b/index.html
@@ -144,9 +144,8 @@
                         <span class="text-white font-mono font-bold tracking-wider">8944021957</span>
                     </a>
 
-                    <a href="mailto:riteshmanna100@gmail.com" class="group w-full md:w-auto flex items-center justify-center gap-3 bg-[#0d1117] border border-[#30363d] px-8 py-4 rounded-xl hover:border-[#2dd4bf] transition-all duration-300">
-                        <span class="text-gray-400 group-hover:text-[#2dd4bf] transition-colors">✉️</span>
-                        <span class="text-white font-mono font-bold tracking-wider">riteshmanna100@gmail.com</span>
+                    <a href="mailto:riteshmanna100@gmail.com" class="group bg-[#0d1117] border border-[#30363d] px-8 py-4 rounded-xl hover:border-[#2dd4bf] transition-all flex items-center justify-center gap-3">
+                    <span class="text-white font-mono font-bold tracking-wider">✉️ Email Me</span>
                     </a>
                 </div>
 
