--- a/index.html
+++ b/index.html
@@ -208,6 +208,34 @@
             <img src="./images/wildlife/Picsart_25-02-05_12-25-18-153.jpg" loading="lazy"class="modal-img">
         </div>
     </div>
+     <!-- Footer -->
+    <footer class="bg-card-bg mt-12 py-8 border-t border-card-bg">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            
+            <!-- Social Icons (Inline SVG) -->
+            <div class="flex justify-center space-x-6 mb-6">
+                <!-- Updated LinkedIn Link -->
+                <a href="https://www.linkedin.com/in/ritesh-manna-70a517274/" target="_blank" class="text-gray-400 hover:text-accent-teal transition duration-300">
+                    <!-- LinkedIn Icon -->
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.513-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                </a>
+                <a href="https://www.instagram.com/_the.ritesh.manna_?igsh=MWYyOHlndTc4NDN3aQ==" target="_blank" class="text-gray-400 hover:text-accent-teal transition duration-300">
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.25.148 4.77 1.67 4.918 4.918.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.148 3.25-1.67 4.77-4.918 4.918-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-3.25-.148-4.77-1.67-4.918-4.918-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.148-3.25 1.67-4.77 4.918-4.918 1.266-.058 1.646-.07 4.85-.07zm0 2.163c-3.116 0-3.483.011-4.7.067-2.607.121-3.72 1.234-3.845 3.845-.056 1.217-.067 1.584-.067 4.7s.011 3.483.067 4.7c.121 2.607 1.234 3.72 3.845 3.845 1.217.056 1.584.067 4.7.067s3.483-.011 4.7-.067c2.607-.121 3.72-1.234 3.845-3.845.056-1.217.067-1.584.067-4.7s-.011-3.483-.067-4.7c-.121-2.607-1.234-3.72-3.845-3.845-1.217-.056-1.584-.067-4.7-.067zm0 3.655c-2.42 0-4.383 1.963-4.383 4.383s1.963 4.383 4.383 4.383 4.383-1.963 4.383-4.383-1.963-4.383-4.383-4.383zm0 2.163c1.238 0 2.22 1.01 2.22 2.22s-.982 2.22-2.22 2.22-2.22-1.01-2.22-2.22.982-2.22 2.22-2.22zm5.796-4.665c-.521 0-.946.425-.946.946s.425.946.946.946.946-.425.946-.946-.425-.946-.946-.946z"/>
+                </svg>
+                </a>
+                <!-- Email Link -->
+                <a href="mailto:riteshmanna100@gmail.com" class="text-gray-400 hover:text-accent-teal transition duration-300">
+                    <!-- Email Icon -->
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z"/></svg>
+                </a>
+            </div>
+
+            <p class="text-sm text-gray-500">
+                &copy; <span id="year"></span> RITESH MANNA. All rights reserved. Photography by RITESH MANNA.
+            </p>
+        </div>
+    </footer>
 
     <script>
         function openGallery(id) {
