--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                 </button>
             </div>
         </section>
-           <p class="text-center text-gray-500 text-[10px] mt-6 mb-10 md:hidden italic uppercase tracking-[0.2em]">
-           Please rotate your mobile for a better view
-           </p>
+           <p class="text-center text-white text-[10px] mt-6 mb-10 md:hidden italic uppercase tracking-[0.2em] animate-pulse">
+    Please rotate your mobile for a better view
+</p>
        <footer id="contact" class="py-24 px-6 bg-[#0d1117]">
     <div class="max-w-3xl mx-auto">
         <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12 text-[#2dd4bf] uppercase tracking-wider">Contact Me</h2>
