--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
         </section>
 
         <section id="projects" class="py-10 grid md:grid-cols-3 gap-8 max-w-6xl mx-auto mb-20">
-            
+            <p class="text-center text-white text-[10px] mt-6 mb-10 md:hidden italic uppercase tracking-[0.2em] animate-pulse">
+             Please rotate your mobile for a better view
+            </p>
             <div class="bg-[#161b22] rounded-3xl p-4 card-hover reveal">
                 <img src="./images/sports/football7.jpg" alt="Sports Cover" class="w-full h-72 object-cover rounded-2xl mb-6">
                 <button onclick="openGallery('sports-modal')" class="w-full bg-[#2dd4bf] text-[#0d1117] py-4 rounded-xl font-black uppercase tracking-widest hover:brightness-110 transition active:scale-95">
@@ -155,9 +157,7 @@
                 </button>
             </div>
         </section>
-           <p class="text-center text-white text-[10px] mt-6 mb-10 md:hidden italic uppercase tracking-[0.2em] animate-pulse">
-    Please rotate your mobile for a better view
-</p>
+           
        <footer id="contact" class="py-24 px-6 bg-[#0d1117] reveal">
     <div class="max-w-3xl mx-auto">
         <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12 text-[#2dd4bf] uppercase tracking-wider">Contact Me</h2>
@@ -191,6 +191,17 @@
     <div id="sports-modal" class="gallery-modal">
         <span class="close-modal" onclick="closeGallery('sports-modal')">&times;</span>
         <div class="modal-content-wrapper">
+            <img src="./images/sports/football21 (1).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (11).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (3).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (6).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (4).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (7).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (8).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (2).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (10).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (9).jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football21 (5).jpg" loading="lazy" class="modal-img">
             <img src="./images/sports/football2.jpg" loading="lazy" class="modal-img">
             <img src="./images/sports/football9.jpg" loading="lazy"class="modal-img">
             <img src="./images/sports/football5.jpg" loading="lazy"class="modal-img">
