--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
     <div id="sports-modal" class="gallery-modal">
         <span class="close-modal" onclick="closeGallery('sports-modal')">&times;</span>
         <div class="modal-content-wrapper">
+            <img src="./images/sports/football 26.jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football 29.jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football 22.jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football 23.jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football 27.jpg" loading="lazy" class="modal-img">
+            <img src="./images/sports/football 25.jpg" loading="lazy" class="modal-img">
+             <img src="./images/sports/football 24.jpg" loading="lazy" class="modal-img">
+              <img src="./images/sports/football 28.jpg" loading="lazy" class="modal-img">
             <img src="./images/sports/football21 (1).jpg" loading="lazy" class="modal-img">
             <img src="./images/sports/football21 (11).jpg" loading="lazy" class="modal-img">
             <img src="./images/sports/football21 (3).jpg" loading="lazy" class="modal-img">
